# cloud_registration

./: CMakeLists.txt  README.md  note.md  package.xml
cfg/: MatcherParams.cfg
include/cloud_registration/: icp_matcher.hpp  ndt_matcher.hpp  point_cloud_publisher.hpp  sacia_matcher.hpp
launch/: point_cloud_matcher.launch  point_cloud_visualization.launch
resources/: map_cloud_1.pcd  map_cloud_2.pcd  scan_cloud_1.pcd  scan_cloud_2.pcd
rviz/: point_cloud_matcher.rviz
src/: cloud_registration.cpp  point_cloud_matcher.cpp  point_cloud_visualization.cpp
